--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-dropzone": "^14.3.8",
+    "react-image-crop": "^11.0.10",
     "react-router-dom": "^7.9.6"
   },
   "devDependencies": {
